@@ -978,6 +978,9 @@ Release 2.6.5 - UNRELEASED
     YARN-2046. Out of band heartbeats are sent only on container kill and
     possibly too early (Ming Ma via jlowe)
 
+    YARN-4722. AsyncDispatcher logs redundant event queue sizes (Jason Lowe via
+    sjlee)
+
 Release 2.6.4 - 2016-02-11
 
   INCOMPATIBLE CHANGES
